# yaserde

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  LICENSE  README.md
.github/workflows/: ci.yml
doc/: skip_serializing.md
examples/: Cargo.toml  bbigras_namespace.rs  lib.rs
examples/src/: bbigras_namespace.rs  boscop.rs  custom_serializer_ab.rs  enum_attribs.rs  generic.rs  lib.rs  ln_dom.rs  same_element_different_namespaces.rs  svd.rs
examples/svd/: Cargo.toml
examples/tests/data/: ab.xml  boscop.xml  ln-dom.xml  svd.xml
tests/data/: bbigras-namespace.xml
yaserde/: Cargo.toml
yaserde/src/: lib.rs  primitives.rs
yaserde/src/de/: mod.rs
yaserde/src/ser/: mod.rs
yaserde/tests/: cdata.rs  de_default.rs  de_flatten.rs  de_namespace.rs  de_option.rs  de_type.rs  default.rs  der_default.rs  der_namespace.rs  der_option.rs  der_type.rs  deserializer.rs  enum.rs  errors.rs  flatten.rs  generic.rs  namespace.rs  option.rs  se_default.rs  se_namespace.rs  se_option.rs  se_type.rs  ser_default.rs  ser_enum.rs  ser_flatten.rs  ser_namespace.rs  ser_option.rs  ser_skip.rs  ser_type.rs  serializer.rs  skip.rs  skip_if.rs  types.rs
yaserde_derive/: Cargo.toml
yaserde_derive/src/: attribute.rs  field_type.rs  lib.rs  primitives.rs
yaserde_derive/src/common/: attribute.rs  field.rs  mod.rs
yaserde_derive/src/de/: attribute.rs  build_default_value.rs  expand_enum.rs  expand_struct.rs  field_type.rs  mod.rs
yaserde_derive/src/der/: attribute.rs  expand_struct.rs  mod.rs
yaserde_derive/src/ser/: element.rs  expand_enum.rs  expand_struct.rs  implement_deserializer.rs  implement_serializer.rs  label.rs  mod.rs  namespace.rs
