[package]
name = "yaserde-examples"
version = "0.10.1"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
license = "MIT"
edition = "2018"
description = "Examples for YaSerDe project"
documentation = "https://docs.rs/yaserde"

[dependencies]
xml = "0.8.20"
yaserde = {version = "0.10.1", path = "../yaserde", features = ["yaserde_derive"] }
