[package]
name = "yaserde-examples"
version = "0.12.0"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
license = "MIT"
edition = "2018"
description = "Examples for YaSerDe project"
documentation = "https://docs.rs/yaserde"

[dependencies]
yaserde = {version = "0.12.0", path = "../yaserde", features = ["yaserde_derive"] }
