[package]
name = "yaserde"
version = "0.3.6"
authors = ["Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>"]
description = "Serialization and deserialization library"
keywords = ["Serialization", "Deserialization", "XML"]
license = "MIT"
repository = "https://github.com/media-io/yaserde"
homepage = "https://github.com/media-io/yaserde"
documentation = "https://docs.rs/yaserde"
readme = "../README.md"

[dependencies]
yaserde_derive = { version = "0.3.6", path = "../yaserde_derive", optional = true }
xml-rs = "0.8.0"
log = "0.4.1"

[dev-dependencies]
yaserde_derive = { version = "0.3.6", path = "../yaserde_derive" }

[badges]
travis-ci = { repository = "media-io/yaserde" }
