[package]
name = "yaserde"
version = "0.9.1"
authors = ["Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>"]
description = "Serialization and deserialization library"
keywords = ["Serialization", "Deserialization", "XML"]
license = "MIT"
repository = "https://github.com/media-io/yaserde"
homepage = "https://github.com/media-io/yaserde"
documentation = "https://docs.rs/yaserde"
readme = "../README.md"
edition = "2018"

[dependencies]
yaserde_derive = { version = "0.9.1", path = "../yaserde_derive", optional = true }
xml-rs = "0.8.3"
log = "0.4"

[dev-dependencies]
env_logger = "0.11.0"
yaserde_derive = { version = "0.9.1", path = "../yaserde_derive" }

[badges]
travis-ci = { repository = "media-io/yaserde" }
