[package]
name = "yaserde_derive"
version = "0.3.10"
authors = ["Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>"]
description = "Serialization and deserialization macros"
keywords = ["Serialization", "Deserialization"]
license = "MIT"
repository = "https://github.com/media-io/yaserde"
homepage = "https://github.com/media-io/yaserde"
documentation = "https://docs.rs/yaserde"
readme = "../README.md"

[dependencies]
syn = { version = "~1.0", features = ["visit", "extra-traits"] }
proc-macro2 = "~1.0"
quote = "~1.0"

[lib]
name = "yaserde_derive"
proc-macro = true

[badges]
travis-ci = { repository = "media-io/yaserde" }
