[package]
name = "yaserde_derive"
version = "0.12.0"
authors = ["Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>"]
description = "Serialization and deserialization macros"
keywords = ["Serialization", "Deserialization"]
license = "MIT"
repository = "https://github.com/media-io/yaserde"
homepage = "https://github.com/media-io/yaserde"
documentation = "https://docs.rs/yaserde"
readme = "../README.md"
edition = "2018"

[dependencies]
heck = "0.5"
serde = { version = "1", features = ["derive"] }
serde_tokenstream = "0.2"
syn = { version = "2", features = ["parsing", "visit", "extra-traits"] }
proc-macro2 = "1"
quote = "~1.0"
xml-rs = "0.8.3"
log = "0.4"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "media-io/yaserde" }
